--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,13 +5,17 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/NewMap.NewMap
 GameDefaultMap=/Game/Levels/NewMap.NewMap
-GlobalDefaultGameMode="/Script/MyProject.MyProjectGameMode"
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -55,8 +59,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/NavigationSystem.RecastNavMesh]
-bForceRebuildOnLoad=True
-RuntimeGeneration=Dynamic
 
