[fix & cleanup] now can spawn pedestrain through plugins & code cleanup

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/NewMap.NewMap
 GameDefaultMap=/Game/Levels/NewMap.NewMap
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Script/SpawnPedestrian.PedestrianSimGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
