--- a/Plugins/SpawnPedestrian/SpawnPedestrian.uplugin
+++ b/Plugins/SpawnPedestrian/SpawnPedestrian.uplugin
@@ -8,6 +8,7 @@
   "CreatedBy": "IvanXu",
   "CreatedByURL": "",
   "DocsURL": "",
+  "MarketplaceURL": "",
   "SupportURL": "",
   "CanContainContent": true,
   "IsBetaVersion": false,
